RESOLVED FIXED127453
The IDB backing store get() method shouldn't call IDB callbacks directly
https://bugs.webkit.org/show_bug.cgi?id=127453
Summary The IDB backing store get() method shouldn't call IDB callbacks directly
Brady Eidson
Reported 2014-01-22 16:14:05 PST
The IDB backing store get() method shouldn't call IDB callbacks directly This is similar to https://bugs.webkit.org/show_bug.cgi?id=127399 but for get() instead of put()
Attachments
Patch v1 (17.27 KB, patch)
2014-01-22 16:18 PST, Brady Eidson
bdakin: review+
Brady Eidson
Comment 1 2014-01-22 16:18:35 PST
Created attachment 221919 [details] Patch v1
Beth Dakin
Comment 2 2014-01-22 16:20:59 PST
Comment on attachment 221919 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=221919&action=review > Source/WebCore/ChangeLog:15 > + (WebCore::IDBServerConnectionLevelDB::get): Donât call IDBCallbacks directly. Funny character.
WebKit Commit Bot
Comment 3 2014-01-22 16:21:02 PST
Attachment 221919 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 4 2014-01-22 16:26:21 PST
Note You need to log in before you can comment on or make changes to this bug.